--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
     <header>
       <nav class="navbar navbar-expand-md navbar-dark" style="background-color: teal;">
         <div class="container-fluid ">
-          <a class="navbar-brand fs-1" href="#" style="color: #ff7f00;">Kisange Collective</a>
+          <a class="navbar-brand fs-1" href="#" style="color: #ff7f00;">
+            <img src="assets/WhatsApp_Image_2022-11-21_at_17.15.54-removebg-preview.png" alt="Logo" width="70" height="64" class="d-inline-block align-text-center">
+            Kisange Collective
+          </a>
+          <!-- <a class="navbar-brand fs-1" href="#" style="color: #ff7f00;">
+            <img src="assets/WhatsApp_Image_2022-11-21_at_17.15.54-removebg-preview.png" alt="logo" class="img-fluid" style="width:"> Kisange Collective</a> -->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
