--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav class="navbar navbar-expand-md navbar-dark" style="background-color: teal;">
         <div class="container-fluid ">
           <a class="navbar-brand fs-1" href="#" style="color: #ff7f00;">
-            <img src="assets/WhatsApp_Image_2022-11-21_at_17.15.54-removebg-preview.png" alt="Logo" width="70" height="64" class="d-inline-block align-text-center">
+            <img src="assets/WhatsApp_Image_2022-11-21_at_17.15.54-removebg-preview.png" alt="Logo" width="70" height="64" class="d-inline-block align-text-center pb-2">
             Kisange Collective
           </a>
           <!-- <a class="navbar-brand fs-1" href="#" style="color: #ff7f00;">
