adding brand color to social media logos

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="index.js"></script>
     <!-- CSS only -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="index.css">
@@ -27,7 +28,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            <ul class="navbar-nav me-auto mb-2 mb-md-0 fs-5">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
@@ -42,7 +43,7 @@
               </li>
               <li class="nav-item">
                 <div class="dropdown">
-                  <button class="btn btn-outline dropdown-toggle nav-link active " type="button" data-bs-toggle="dropdown" aria-expanded="true">
+                  <button class="btn btn-outline dropdown-toggle nav-link active border-0 " type="button" data-bs-toggle="dropdown" aria-expanded="true">
                     Media
                   </button>
                   <ul class="dropdown-menu" style="background-color: teal;">
@@ -84,10 +85,10 @@
             <h1 class="featurette-heading lh-1 text-wrap fs-1 fw-bolder mt-4">Feminism for Socio-Economic Justice</h1>
             <p class="lead fs-4 pt-2">Meeting the need by women and other marginalized groups to understand how institutions of oppression combine to exploit and impoverish them.</p>
             <div class="d-flex fs-1 justify-content-center gap-4">
-              <i class="bi bi-facebook"></i>
-              <i class="bi bi-twitter"></i>
-              <i class="bi bi-instagram"></i>
-              <i class="bi bi-linkedin"></i>
+              <i class="bi bi-facebook" style="color: #3b5998;background-image: linear-gradient( to bottom, transparent 20%, white 20%, white 93%, transparent 93% ); background-size: 55%;background-position: 70% 0;background-repeat: no-repeat;"></i>
+              <i class="bi bi-twitter" style="color: #00ACEE;"></i>
+              <i class="bi bi-instagram" style="background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);-webkit-background-clip: text;background-clip: text;-webkit-text-fill-color: transparent;"></i>
+              <i class="bi bi-linkedin" style="color: #0077B5;"></i>
             </div>
           </div>
           <div class="col-md-5">
@@ -178,6 +179,7 @@
     
     
 <!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>  
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script> 
+<script src="index.js"></script>
 </body>
 </html>
