--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
       <nav class="navbar navbar-expand-md navbar-dark" style="background-color: teal;">
         <div class="container-fluid ">
-          <a class="navbar-brand fs-1" href="#" style="color: #ff7f00;">
+          <a class="navbar-brand fs-1" href="index.html" style="color: #ff7f00;">
             <img src="assets/WhatsApp_Image_2022-11-21_at_17.15.54-removebg-preview.png" alt="Logo" width="70" height="64" class="d-inline-block align-text-center pb-2">
             Kisange Collective
           </a>
@@ -30,16 +30,16 @@
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav me-auto mb-2 mb-md-0 fs-5">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="about.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active ">Join Us</a>
+                <a class="nav-link active" href="join.html">Join Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active ">Programmes</a>
+                <a class="nav-link active" href="programmes.html">Programmes</a>
               </li>
               <li class="nav-item">
                 <div class="dropdown">
@@ -47,18 +47,18 @@
                     Media
                   </button>
                   <ul class="dropdown-menu" style="background-color: teal;">
-                    <li><a class="dropdown-item" href="#">Gallery</a></li>
-                    <li><a class="dropdown-item" href="#">Publications</a></li>
-                    <li><a class="dropdown-item" href="#">Resources</a></li>
+                    <li><a class="dropdown-item" href="gallery.html">Gallery</a></li>
+                    <li><a class="dropdown-item" href="publication.html">Publications</a></li>
+                    <li><a class="dropdown-item" href="resource.html">Resources</a></li>
                   </ul>
                 </div>
                
               </li>
               <li class="nav-item">
-                <a class="nav-link active ">Blog</a>
+                <a class="nav-link active " href="blog.html">Blog</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active ">Donate</a>
+                <a class="nav-link active" href="Donate.html">Donate</a>
               </li>
             </ul>
           </div>
