--- a/about.html
+++ b/about.html
@@ -67,44 +67,38 @@
     </header>
     
     <main id="main">
-      <section>
-        <div class="container" data-aos="fade-up">
-          <div class="row">
-            <div class="col-lg-12 text-center mb-5">
-              <h1 class="page-title">About us</h1>
-            </div>
+      <section class="container-fluid">
+        <div class="row featurette p-5" >
+          <div class="col-md-7 order-md-2 text-center pt-5">
+            <h1 class="featurette-heading fw-bold lh-1">About us</h1>
+            <p class="lead">Kisange Collective is a grassroots women’s collective for localised knowledge creation aimed at resisting surviving and overcoming oppression and exploitation. It combines feminism, socialism and decoloniality to capture the realities of all of our lives and to reimagine a kinder and fairer world. While we realize the fight for liberation is a collective effort, our solidarity lies with those on the fringes of society suffering from multiple forms of oppression, and whose lived realities are already resistance to oppression and, therefore, a liberation struggle. This ongoing resistance to oppression, in turn, informs our theory and practice.</p>
+            <h1 class="featurette-heading fw-bold lh-1">Mission</h1>
+            <p class="lead">To provide communities with effective tools to deliberate and participate in overcoming oppression and exploitation and recreate a better world for themselves.</p>
+            <h1 class="featurette-heading fw-bold lh-1">Vision</h1>
+            <p class="lead">To be integral drivers in the struggle for a world free of capitalist and patriarchal domination.</p>
+              <!-- <button class="btn btn-outline" style="background-color: teal;">READ MORE</button> -->
           </div>
-  
-          <div class="row mb-5">
-  
-            <div class="d-md-flex post-entry-2 half">
-              <a href="#" class="me-4 thumbnail">
-                <img src="assets/jazmin-quaynor-cmSa1Gs-FTQ-unsplash.jpg" alt="" class="img-fluid">
-              </a>
-              <div class="ps-md-5 mt-4 mt-md-0">
-                <div class="post-meta mt-4">About us</div>
-                <h2 class="mb-4 display-4">Company History</h2>
-  
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, perspiciatis repellat maxime, adipisci non ipsam at itaque rerum vitae, necessitatibus nulla animi expedita cumque provident inventore? Voluptatum in tempora earum deleniti, culpa odit veniam, ea reiciendis sunt ullam temporibus aut!</p>
-                <p>Fugit eaque illum blanditiis, quo exercitationem maiores autem laudantium unde excepturi dolores quasi eos vero harum ipsa quam laborum illo aut facere voluptates aliquam adipisci sapiente beatae ullam. Tempora culpa iusto illum accusantium cum hic quisquam dolor placeat officiis eligendi.</p>
-              </div>
-            </div>
-  
-            <div class="d-md-flex post-entry-2 half mt-5">
-              <a href="#" class="me-4 thumbnail order-2">
-                <img src="assets/clarke-sanders-ybPJ47PMT_M-unsplash.jpg" alt="" class="img-fluid">
-              </a>
-              <div class="pe-md-5 mt-4 mt-md-0">
-                <div class="post-meta mt-4">Mission &amp; Vision</div>
-                <h2 class="mb-4 display-4">Mission &amp; Vision</h2>
-  
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, perspiciatis repellat maxime, adipisci non ipsam at itaque rerum vitae, necessitatibus nulla animi expedita cumque provident inventore? Voluptatum in tempora earum deleniti, culpa odit veniam, ea reiciendis sunt ullam temporibus aut!</p>
-                <p>Fugit eaque illum blanditiis, quo exercitationem maiores autem laudantium unde excepturi dolores quasi eos vero harum ipsa quam laborum illo aut facere voluptates aliquam adipisci sapiente beatae ullam. Tempora culpa iusto illum accusantium cum hic quisquam dolor placeat officiis eligendi.</p>
-              </div>
-            </div>
-  
+          <div class="col-md-5 order-md-1">
+            <img src="assets/WhatsApp Image 2022-11-27 at 21.24.01.jpeg" alt="" class="img-fluid">    
           </div>
-  
+        </div>
+        <div class="row featurette p-5" >
+          <div class="col-md-7 order-md-2 text-center pt-5">
+            <h1 class="featurette-heading fw-bold lh-1">Our Story</h1>
+            <p class="lead">The founders of Kisange Collective met online. Their passion and interest in feminist discourse led to familiarity with each other as they frequently engaged one another in various feminist topics on the platform. It turns out, feminist familiarity breeds friendship because somewhere along the way, the ‘Feminist and Socialist Reading Group’ was formed. It allowed us the convenience they needed to explore and critically analyze their feminist and socialist politics, particularly concerning us as African women and gender minorities in the post-colonial era.
+            </p>
+            <p class="lead">In the reading group, we began to develop a deeper understanding of feminism and socialism but more importantly, we experienced learning in community with others. Besides the overwhelming knowledge from books, they were enriched intellectually emotionally and physically by the wisdom of members. When you read in community with others, you learn from a place of love, care and concern. What a profound feeling it was, that we couldn't keep it to ourselves because Kisange Collective was born.
+            </p>
+            <p class="lead">At Kisange Collective, we engage the community in working towards the liberation of women and gender and sexual minorities from patriarchal domination and economic oppression. Through care for the land, respect for agency and use of love as a politic, we believe everyone has something to contribute to the struggle.</p>
+            
+              <!-- <button class="btn btn-outline" style="background-color: teal;">READ MORE</button> -->
+          </div>
+          <div class="col-md-5 order-md-2">
+            <img src="assets/WhatsApp Image 2022-11-27 at 21.44.40.jpeg" alt="" class="img-fluid">    
+          </div>
+        </div>
+        <div>
+          <p class="fst-italic fs-6">Kisange is a dholuo word for that which is collectively held, owned or used. Our organizing is therefore a collective initiative, created, governed and controlled by all members of the collective.</p>
         </div>
       </section>
   
@@ -120,7 +114,7 @@
             <div class="col-lg-6">
               <div class="row">
                 <div class="col-6">
-                  <img src="assets/jen-theodore-1bTDrEEhqig-unsplash.jpg" alt="" class="img-fluid mb-4">
+                  <img src="assets/WhatsApp Image 2022-11-27 at 21.24.01 (1).jpeg" alt="" class="img-fluid mb-4">
                 </div>
                 <div class="col-6 mt-4">
                   <img src="assets/miguel-bruna-TzVN0xQhWaQ-unsplash.jpg" alt="" class="img-fluid mb-4">
