--- a/blog.html
+++ b/blog.html
@@ -172,8 +172,8 @@
                             <div class="col-sm-6">
                                 <ul class="list-unstyled mb-0">
                                     <li><a href="#!">Feminism</a></li>
-                                    <li><a href="#!">title 2</a></li>
-                                    <li><a href="#!">title 3</a></li>
+                                    <li><a href="#!">Ecological Justice</a></li>
+                                    <li><a href="#!"></a></li>
                                 </ul>
                             </div>
                             <div class="col-sm-6">
