--- a/about.html
+++ b/about.html
@@ -82,8 +82,8 @@
             <img src="assets/WhatsApp Image 2022-11-27 at 21.24.01.jpeg" alt="" class="img-fluid">    
           </div>
         </div>
-        <div class="row featurette p-5" >
-          <div class="col-md-7 order-md-2 text-center pt-5">
+        <div class="row featurette p-5" style="background-color: rgba(255,127,0,0.05);" >
+          <div class="col-md-7 order-md-2 text-center ">
             <h1 class="featurette-heading fw-bold lh-1">Our Story</h1>
             <p class="lead">The founders of Kisange Collective met online. Their passion and interest in feminist discourse led to familiarity with each other as they frequently engaged one another in various feminist topics on the platform. It turns out, feminist familiarity breeds friendship because somewhere along the way, the ‘Feminist and Socialist Reading Group’ was formed. It allowed us the convenience they needed to explore and critically analyze their feminist and socialist politics, particularly concerning us as African women and gender minorities in the post-colonial era.
             </p>
