--- a/about.html
+++ b/about.html
@@ -90,6 +90,7 @@
             <p class="lead">In the reading group, we began to develop a deeper understanding of feminism and socialism but more importantly, we experienced learning in community with others. Besides the overwhelming knowledge from books, they were enriched intellectually emotionally and physically by the wisdom of members. When you read in community with others, you learn from a place of love, care and concern. What a profound feeling it was, that we couldn't keep it to ourselves because Kisange Collective was born.
             </p>
             <p class="lead">At Kisange Collective, we engage the community in working towards the liberation of women and gender and sexual minorities from patriarchal domination and economic oppression. Through care for the land, respect for agency and use of love as a politic, we believe everyone has something to contribute to the struggle.</p>
+            <p class="fst-italic fs-6">"Kisange is a dholuo word for that which is collectively held, owned or used. Our organizing is therefore a collective initiative, created, governed and controlled by all members of the collective."</p>
             
               <!-- <button class="btn btn-outline" style="background-color: teal;">READ MORE</button> -->
           </div>
@@ -98,11 +99,11 @@
           </div>
         </div>
         <div>
-          <p class="fst-italic fs-6">Kisange is a dholuo word for that which is collectively held, owned or used. Our organizing is therefore a collective initiative, created, governed and controlled by all members of the collective.</p>
+          
         </div>
       </section>
   
-      <section class="mb-5 bg-light py-5">
+      <section class="mb-5  py-5"style="background-color: rgba(45,128,128,0.1);">
         <div class="container" data-aos="fade-up">
           <div class="row justify-content-between align-items-lg-center">
             <div class="col-lg-5 mb-4 mb-lg-0">
