--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="row featurette m-5">
           <div class="col-md-7 text-sm-center pt-5">
             <h1 class="featurette-heading lh-1 text-wrap fs-1 fw-bolder mt-4">Feminism for Socio-Economic Justice</h1>
-            <p class="lead fs-4 pt-2">Meeting the need by women and other marginalized groups to understand how institutions of oppression combine to exploit and impoverish them.</p>
+            <p class="lead fs-4 pt-2"> Raising consciousness by creating conversation platforms to root out the ideological domination that leads to discrimination, oppression, and exploitation.</p>
             <div class="d-flex fs-1 justify-content-center gap-4">
               <i class="bi bi-facebook" style="color: #3b5998;background-image: linear-gradient( to bottom, transparent 20%, white 20%, white 93%, transparent 93% ); background-size: 55%;background-position: 70% 0;background-repeat: no-repeat;"></i>
               <i class="bi bi-twitter" style="color: #00ACEE;"></i>
