--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <p class="lead">Engaging community in working towards the liberation of women and gender and sexual minorities from patriarchal domination and economic oppression. <br>
               We are raising consciousness by creating conversation platforms to root out the ideological domination that leads to discrimination, oppression, and exploitation. <br>
               We are also working with people and organizations who share similar goals for liberation.</p>
-              <button class="btn btn-outline" style="background-color: teal;">READ MORE</button>
+              <a href="programmes.html"><button class="btn btn-outline" style="background-color: teal;">READ MORE</button></a>
           </div>
           <div class="col-md-5 order-md-1">
             <img src="assets/WhatsApp Image 2022-11-21 at 13.50.30 (1).jpeg" alt="" class="img-fluid">    
@@ -116,11 +116,11 @@
     
         <div class="row featurette m-5">
           <div class="col-md-7 text-center pt-5">
-            <h1 class="featurette-heading fw-bold lh-1">Our Mission</h1>
+            <h1 class="featurette-heading fw-bold lh-1">Our Ideology</h1>
             <p class="lead fw-bold text-muted">We are feminists and Socialists grounded in decoloniality.</p>
             <p class="lead">Feminism and Socialism provide us with an ideological position to struggle for the liberation of women, gender and sexual minorities from patriarchal and capitalist domination, as we aim to achieve social and economic justice for everyone.</p>
             <p class="lead">Our solidarity lies with those on the fringes of society suffering from multiple forms of oppression and whose lived realities are already resistance to oppression.</p>
-            <button class="btn btn-outline" style="background-color: teal;">READ MORE</button>
+            <a href="about.html"><button class="btn btn-outline" style="background-color: teal;">READ MORE</button></a>
           </div>
           <div class="col-md-5">
             <img src="assets/WhatsApp Image 2022-11-21 at 13.50.30 (2).jpeg" alt="" class="img-fluid">    
@@ -132,6 +132,28 @@
         <!-- /END THE FEATURETTES -->
     
       </div><!-- /.container -->
+      <section class="mb-5  py-5"style="background-color: rgba(45,128,128,0.1);">
+        <div class="container" data-aos="fade-up">
+          <div class="row justify-content-between align-items-lg-center">
+            <div class="col-lg-5 mb-4 mb-lg-0">
+              <h2 class="display-4 mb-4">Latest Blog</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, rem eaque vel est asperiores iste pariatur placeat molestias, rerum provident ea maiores debitis eum earum esse quas architecto! Minima, voluptatum! Minus tempora distinctio quo sint est blanditiis voluptate eos. Commodi dolore nesciunt culpa adipisci nemo expedita suscipit autem dolorum rerum?</p>
+              <p>At magni dolore ullam odio sapiente ipsam, numquam eius minus animi inventore alias quam fugit corrupti error iste laboriosam dolorum culpa doloremque eligendi repellat iusto vel impedit odit cum. Sequi atque molestias nesciunt rem eum pariatur quibusdam deleniti saepe eius maiores porro quam, praesentium ipsa deserunt laboriosam adipisci. Optio, animi!</p>
+              <p><a href="blog.html" class="more">View All Blog Posts</a></p>
+            </div>
+            <div class="col-lg-6">
+              <div class="row">
+                <div class="col-6">
+                  <img src="assets/WhatsApp Image 2022-11-27 at 21.24.01 (1).jpeg" alt="" class="img-fluid mb-4">
+                </div>
+                <div class="col-6 mt-4">
+                  <img src="assets/miguel-bruna-TzVN0xQhWaQ-unsplash.jpg" alt="" class="img-fluid mb-4">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <section id="contact">
         <div class="section-content">
           <h1 class="section-header">Get in <span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s"> Touch with us</span></h1>
