adding a few styling and changing pictures

--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
     
     <main id="main">
       <section class="container-fluid">
-        <div class="row featurette p-5" >
+        <div class="row featurette p-5 justify-content-between align-items-md-center" >
           <div class="col-md-7 order-md-2 text-center pt-5">
             <h1 class="featurette-heading fw-bold lh-1">About us</h1>
             <p class="lead">Kisange Collective is a grassroots women’s collective for localised knowledge creation aimed at resisting surviving and overcoming oppression and exploitation. It combines feminism, socialism and decoloniality to capture the realities of all of our lives and to reimagine a kinder and fairer world. While we realize the fight for liberation is a collective effort, our solidarity lies with those on the fringes of society suffering from multiple forms of oppression, and whose lived realities are already resistance to oppression and, therefore, a liberation struggle. This ongoing resistance to oppression, in turn, informs our theory and practice.</p>
@@ -79,10 +79,10 @@
               <!-- <button class="btn btn-outline" style="background-color: teal;">READ MORE</button> -->
           </div>
           <div class="col-md-5 order-md-1">
-            <img src="assets/WhatsApp Image 2022-11-27 at 21.24.01.jpeg" alt="" class="img-fluid">    
+            <img src="assets/clarke-sanders-ybPJ47PMT_M-unsplash.jpg" alt="" class="img-fluid" style="max-width: 100%;height: auto;">    
           </div>
         </div>
-        <div class="row featurette p-5" style="background-color: rgba(255,127,0,0.05);" >
+        <div class="row featurette p-5 justify-content-between align-items-md-center" style="background-color: rgba(255,127,0,0.05);" >
           <div class="col-md-7 order-md-2 text-center ">
             <h1 class="featurette-heading fw-bold lh-1">Our Story</h1>
             <p class="lead">The founders of Kisange Collective met online. Their passion and interest in feminist discourse led to familiarity with each other as they frequently engaged one another in various feminist topics on the platform. It turns out, feminist familiarity breeds friendship because somewhere along the way, the ‘Feminist and Socialist Reading Group’ was formed. It allowed us the convenience they needed to explore and critically analyze their feminist and socialist politics, particularly concerning us as African women and gender minorities in the post-colonial era.
@@ -94,8 +94,8 @@
             
               <!-- <button class="btn btn-outline" style="background-color: teal;">READ MORE</button> -->
           </div>
-          <div class="col-md-5 order-md-2">
-            <img src="assets/WhatsApp Image 2022-11-27 at 21.44.40.jpeg" alt="" class="img-fluid">    
+          <div class="col-md-4 order-md-2">
+            <img src="assets/jazmin-quaynor-cmSa1Gs-FTQ-unsplash.jpg" alt="" class="img-fluid" style="max-width: 100%;height: auto;">    
           </div>
         </div>
         <div>
