adding styling to home

--- a/index.html
+++ b/index.html
@@ -82,7 +82,10 @@
         <!-- <hr class="featurette-divider"> -->
     
         <div class="row featurette m-5 justify-content-between align-items-md-center">
-          <div class="col-md-7 text-sm-center pt-5">
+          <div class="col-md-7 text-sm-center p-5" style="border-radius: 38px;
+          background: linear-gradient(145deg, #e6e6e6, #ffffff);
+          box-shadow:  36px 36px 73px #828282,
+                       -36px -36px 73px #ffffff;">
             <h1 class="featurette-heading lh-1 text-wrap fs-1 fw-bolder mt-4 animate__animated animate__bounce">Feminism for Socio-Economic Justice</h1>
             <p class="lead fs-4 pt-2"> Raising consciousness by creating conversation platforms to root out the ideological domination that leads to discrimination, oppression, and exploitation.</p>
             <div class="d-flex fs-1 justify-content-center gap-4">
